# sig-service

./: .dir-locals.el  .dockerignore  .ghci  .gitignore  .gitmodules  Application.hs  Dockerfile  Foundation.hs  Git.hs  README.md  Settings.hs  devel.hs  sig-service.cabal  sig-service.yaml  stack.yaml
Handler/: DownloadArchive.hs  Home.hs  UploadSig.hs
Yesod/: Caching.hs
Yesod/Caching/: Filesystem.hs
app/: DevelMain.hs
config/: deploy.yaml  keter.yml  routes  settings.yml
deploy/: Procfile
etc/: build-deploy.sh
etc/docker/: build.sh  push.sh
etc/docker/sig-service-base/: Dockerfile
etc/kubernetes/: deploy_rc.sh  sig-service-prod-rc.yaml  sig-service-prod-secret.yaml  sig-service-prod-svc.yaml
kube/: consul-vault-rc.yaml  consul-vault-svc.yaml  sig-service-rc.yaml  sig-service-secret.yaml  sig-service-svc.yaml
kube/consul/: Dockerfile  consul.yaml
kube/vault/: Dockerfile  vault.yaml
templates/: default-layout-wrapper.hamlet  homepage.hamlet  homepage.lucius
