name:              sig-service
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Git

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: Cabal >= 1.18.1.5
                 , aeson                         >= 0.6
                 , base                          >= 4          && < 5
                 , bytestring                    >= 0.9
                 , conduit                       >= 1.0
                 , conduit-extra >= 1.1.7.1
                 , containers >= 0.5.5.1
                 , data-default
                 , directory                     >= 1.1
                 , email-validate >= 2.0.1
                 , exceptions >= 0.8.0.2
                 , fast-logger                   >= 2.2
                 , hjsmin                        >= 0.1
                 , http-conduit                  >= 2.1
                 , lifted-base >= 0.2.3.6
                 , monad-control                 >= 0.3
                 , monad-logger                  >= 0.3
                 , shakespeare                   >= 2.0
                 , sig-tool
                 , template-haskell
                 , text                          >= 0.11
                 , transformers >= 0.4.3.0
                 , void >= 0.7
                 , wai-extra                     >= 3.0
                 , wai-logger                    >= 2.2
                 , warp                          >= 3.0
                 , yaml                          >= 0.8
                 , yesod                         >= 1.2.5
                 , yesod-auth                    >= 1.3
                 , yesod-core                    >= 1.2.20
                 , yesod-form                    >= 1.3
                 , yesod-static                  >= 1.2

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         sig-service
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , sig-service
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , sig-service
                 , yesod-test >= 1.2
                 , yesod-core
                 , yesod
                 , hspec
